# auto_mail_sender_excel

./: Book1.xlsx
Mail-excel-frontend/: index.html  package-lock.json  package.json
Mail-excel-frontend/src/: App.tsx  config.ts  index.css
Mail-excel-frontend/src/components/: ChatBox.tsx  FileUploader.tsx  Header.tsx  StatusCard.tsx
Mail-through-excel/: .gitignore  main.py  pyproject.toml  requirements.txt  sample_contacts.xlsx
Mail-through-excel/email_utils/: email.py
Mail-through-excel/tooling/: tools.py
