[project]
name = "auto-email-sender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116.1",
    "openai-agents>=0.0.6",
    "openai==1.97.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "aiohttp>=3.12.15",
]
